# shards-logger

./: LICENSE  README.md  pyproject.toml
src/shards/logger/: __about__.py  __init__.py
tests/: test_logger_general.py  test_logger_process.py  test_logger_queued.py  test_logger_struct_log.py
